adding new members and searching through registered users completed
