# app/Http/Controllers/General/OrganizationController.php
@@ -15,10 +15,12 @@ use App\Http\Requests\General\NewOrganizationRequest;
 
 //* Resources
 use App\Http\Resources\General\OrganizationResource;
+use App\Http\Resources\User\UserDetailsResource;
 
 //* Utilities
 use Illuminate\Support\Str;
 use Illuminate\Support\Facades\DB;
+use Illuminate\Support\Facades\Validator;
 
 class OrganizationController extends Controller
 {
@@ -192,5 +194,108 @@ class OrganizationController extends Controller
             return response()->json(['status'=>'failed','message'=>$e->getMessage()],500);
         }
     }
+
+    //TODO:: Search query to find a registered user for an organization which will aid the team leader to add new members to the organization.
+    public function search_registered_users(){
+        try{
+            $query = request()->input("name");
+            if(!$query){
+                return response()->json(['status'=>"failed","message"=>'Search requires a parameter to work!!'],422);
+            }
+            $search_query = User::query();
+            $full_name = request()->input("name");
+            $full_name_parts = explode(" ", $full_name);
+
+            $search_query->where(function($q) use ($full_name, $full_name_parts) {
+                if (count($full_name_parts) === 1) {
+                    $q->where("first_name", "like", "%" . $full_name_parts[0] . "%")
+                        ->orWhere("last_name", "like", "%" . $full_name_parts[0] . "%");
+                } else {
+                    $q->where(function ($q) use ($full_name, $full_name_parts) {
+                        $q->whereRaw("CONCAT(first_name, ' ', last_name) = ?", [$full_name]);
+                    })->orWhere(function ($q) use ($full_name_parts) {
+                        $q->where("first_name", "like", "%" . $full_name_parts[0] . "%")
+                            ->where("last_name", "like", "%" . $full_name_parts[1] . "%");
+                    })->orWhere(function ($q) use ($full_name_parts) {
+                        $q->where("first_name", "like", "%" . $full_name_parts[1] . "%")
+                            ->where("last_name", "like", "%" . $full_name_parts[0] . "%");
+                    });
+                }
+            });
+
+            $results = $search_query->get();
+
+            return response()->json(['status'=>'success',"user"=>UserDetailsResource::collection($results)],200);
+        }catch(\Exception $e){
+            return response()->json(['status'=>"failed","message"=>$e->getMessage()],500);
+        }
+    }
+
+
+    //TODO:: Adding new members to an organization
+    public function add_members_to_organization($unique_id){
+        try{
+            $rules = [
+                "member_uuid"=>"required|string"
+            ];
+            $validation = Validator::make(request()->all(),$rules);
+            if($validation->fails()){
+                return response()->json(['status'=>"failed","message"=>$validation->errors()->first()]);
+            }
+            $member = User::query()->where("uuid",request()->member_uuid)->first();
+            if(!$member){
+                return response()->json(['status'=>"failed","message"=>"Sorry, the user you are trying to add is not a registered user in the application"],404);
+            }
+
+            $organization = Organization::query()->where("unique_id",$unique_id)->where("status","!=","completed")->orWhere("status","!=","active")->first();
+            if(!$organization){
+                return response()->json(['status'=>"failed","message"=>"Sorry, you cannot add members to an active or complete organization"],400);
+            }
+
+            $team_leader = auth()->guard('api')->user();
+            if(!$team_leader){
+                return response()->json(['status'=>"failed","message"=>"Sorry, user must be logged in to perform this function"],404);
+            }
+
+            $organization_team_leader = OrganizationMember::query()->where("organization_id",$organization->id)
+                                                                    ->where("user_id",$team_leader->id)
+                                                                    ->where("role","team_leader")
+                                                                    ->first();
+
+            if($organization_team_leader->user_id === $member->id) {
+                return response()->json(['status'=>'failed','message'=>"Sorry, you are already the team leader of this organization"],400);
+            }
+
+            if($organization->user_id !== $team_leader->id){
+                return response()->json(['status'=>"failed","message"=>"Sorry, this organization does not belong to you"],400);
+            }
+
+            //* data needed for the creating a member of an organization
+            $user_id    = $member->id;
+            $role       = "member";
+            $name       = $member->first_name." ".$member->last_name;
+            $email      = $member->email;
+            $phone      = $member->phone_number;
+
+            $new_member = $organization->members()->create([
+                "user_id"=>$user_id,
+                "role"  =>$role,
+                "name"  =>$name,
+                "email" =>$email,
+                "phone_number" =>$phone
+            ]);
+
+            if($new_member){
+                return response()->json(['status'=>"success","message"=>"Great, new member has been added to this organization"],200);
+            }
+            else{
+                return response()->json(['status'=>"failed","message"=>"Sorry, the member could not be added."],400);
+            }
+
+        }catch(\Exception $e){
+            return response()->json(['status'=>"failed","message"=>$e->getMessage()],500);
+        }
+    }
+
 }
 
