# routes/v1/organization.php
@@ -10,6 +10,9 @@ Route::group(["prefix"=>"user/organization/"], function(){
     //Tip:: Create a new organization
     Route::post("create",[OrganizationController::class,"create_organization"]);
 
+    //Tip:: Search through registered users for people the team leader might want to include in an organization.
+    Route::get("search_users",[OrganizationController::class,"search_registered_users"]);
+
     //Tip:: Show all the organization a user is part of regardless of the status of the organization
     Route::get("show/all",[OrganizationController::class,"index"]);
 
@@ -24,5 +27,8 @@ Route::group(["prefix"=>"user/organization/"], function(){
 
     //Tip:: Update a specific organization
     Route::delete("remove/{unique_id}",[OrganizationController::class,"remove"]);
+
+    //Tip:: Add new Member to the Organization.
+    Route::post("member/add/{unique_id}",[OrganizationController::class,"add_members_to_organization"]);
 
 });
